PECL3/scr/PECL3Parser.java
// Generated from .\src\PECL3Parser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PECL3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, BLOCK_COMMENT=2, DOC_COMMENT=3, ASSIGN=4, OP=5, CP=6, 
		COMMA=7, COLON=8, SEMI_COLON=9, NEWLINE=10, LESSER=11, GREATER=12, LESSER_EQ=13, 
		GREATER_EQ=14, EQ=15, NOT_EQ=16, BIT_AND=17, AND=18, BIT_OR=19, OR=20, 
		ADD=21, SUB=22, MULT=23, QUOTIENT=24, UNDER_SCORE=25, OP_BRACKET=26, CL_BRACKET=27, 
		NOT=28, INT=29, FLOAT=30, STRING=31, BOOLEAN=32, AS_STRING=33, AS_NUMBER=34, 
		AS_VOID=35, AS_BOOLEAN=36, INCLUDE=37, IF=38, WHILE=39, FUNC=40, ST_BLOCK=41, 
		END_BLOCK=42, END_IF=43, ST_DO=44, END_DO=45, RETURN=46, FROM=47, TO=48, 
		STEP=49, ELSE=50, FOR=51, IN=52, THEN=53, TRUE=54, FALSE=55, ID=56, WS=57;
	public static final int
		RULE_prog = 0, RULE_return_val = 1, RULE_while_op = 2, RULE_if_op = 3, 
		RULE_else_op = 4, RULE_for_op = 5, RULE_step_op = 6, RULE_basic_func = 7, 
		RULE_assign_sc = 8, RULE_assign = 9, RULE_lib = 10, RULE_def_func = 11, 
		RULE_def_var = 12, RULE_var_definition = 13, RULE_func_call = 14, RULE_func_sc = 15, 
		RULE_expr_total = 16, RULE_expr_content = 17, RULE_logic_expr = 18, RULE_add = 19, 
		RULE_sub = 20, RULE_mult = 21, RULE_quotient = 22, RULE_lesser = 23, RULE_greater = 24, 
		RULE_lesser_eq = 25, RULE_greater_eq = 26, RULE_eq = 27, RULE_not_eq = 28, 
		RULE_bit_and = 29, RULE_and = 30, RULE_bit_or = 31, RULE_or = 32, RULE_func_id = 33, 
		RULE_var_id = 34, RULE_identifier = 35, RULE_assign_value = 36, RULE_op_par = 37, 
		RULE_cl_par = 38, RULE_comma = 39, RULE_colon = 40, RULE_semi_colon = 41, 
		RULE_newline = 42, RULE_block_start = 43, RULE_do_start = 44, RULE_do_end = 45, 
		RULE_block_end = 46, RULE_if_end = 47, RULE_include_kw = 48, RULE_func_kw = 49, 
		RULE_in_kw = 50, RULE_if_kw = 51, RULE_else_kw = 52, RULE_while_kw = 53, 
		RULE_for_kw = 54, RULE_return_kw = 55, RULE_from_kw = 56, RULE_to_kw = 57, 
		RULE_step_kw = 58, RULE_then_kw = 59, RULE_true_kw = 60, RULE_false_kw = 61, 
		RULE_op_bracket = 62, RULE_cl_bracket = 63, RULE_not = 64, RULE_string = 65, 
		RULE_boolean_n = 66, RULE_int_n = 67, RULE_float_n = 68, RULE_number = 69, 
		RULE_value = 70, RULE_type_string = 71, RULE_type_number = 72, RULE_type_void = 73, 
		RULE_type_boolean = 74, RULE_as_var_type = 75, RULE_as_type = 76;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "return_val", "while_op", "if_op", "else_op", "for_op", "step_op", 
			"basic_func", "assign_sc", "assign", "lib", "def_func", "def_var", "var_definition", 
			"func_call", "func_sc", "expr_total", "expr_content", "logic_expr", "add", 
			"sub", "mult", "quotient", "lesser", "greater", "lesser_eq", "greater_eq", 
			"eq", "not_eq", "bit_and", "and", "bit_or", "or", "func_id", "var_id", 
			"identifier", "assign_value", "op_par", "cl_par", "comma", "colon", "semi_colon", 
			"newline", "block_start", "do_start", "do_end", "block_end", "if_end", 
			"include_kw", "func_kw", "in_kw", "if_kw", "else_kw", "while_kw", "for_kw", 
			"return_kw", "from_kw", "to_kw", "step_kw", "then_kw", "true_kw", "false_kw", 
			"op_bracket", "cl_bracket", "not", "string", "boolean_n", "int_n", "float_n", 
			"number", "value", "type_string", "type_number", "type_void", "type_boolean", 
			"as_var_type", "as_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "':='", "'('", "')'", "','", "':'", "';'", null, 
			"'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&'", "'&&'", "'|'", "'||'", 
			"'+'", "'-'", "'*'", "'/'", "'_'", "'['", "']'", "'!'", null, null, null, 
			null, "'cadena'", "'numero'", "'void'", "'booleano'", "'include'", "'if'", 
			"'while'", "'function'", "'begin'", "'end'", "'endif'", "'do'", "'enddo'", 
			"'devolver'", "'from'", "'to'", "'step'", "'else'", "'for'", "'in'", 
			"'then'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LINE_COMMENT", "BLOCK_COMMENT", "DOC_COMMENT", "ASSIGN", "OP", 
			"CP", "COMMA", "COLON", "SEMI_COLON", "NEWLINE", "LESSER", "GREATER", 
			"LESSER_EQ", "GREATER_EQ", "EQ", "NOT_EQ", "BIT_AND", "AND", "BIT_OR", 
			"OR", "ADD", "SUB", "MULT", "QUOTIENT", "UNDER_SCORE", "OP_BRACKET", 
			"CL_BRACKET", "NOT", "INT", "FLOAT", "STRING", "BOOLEAN", "AS_STRING", 
			"AS_NUMBER", "AS_VOID", "AS_BOOLEAN", "INCLUDE", "IF", "WHILE", "FUNC", 
			"ST_BLOCK", "END_BLOCK", "END_IF", "ST_DO", "END_DO", "RETURN", "FROM", 
			"TO", "STEP", "ELSE", "FOR", "IN", "THEN", "TRUE", "FALSE", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PECL3Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PECL3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public List<Def_varContext> def_var() {
			return getRuleContexts(Def_varContext.class);
		}
		public Def_varContext def_var(int i) {
			return getRuleContext(Def_varContext.class,i);
		}
		public List<Def_funcContext> def_func() {
			return getRuleContexts(Def_funcContext.class);
		}
		public Def_funcContext def_func(int i) {
			return getRuleContext(Def_funcContext.class,i);
		}
		public List<LibContext> lib() {
			return getRuleContexts(LibContext.class);
		}
		public LibContext lib(int i) {
			return getRuleContext(LibContext.class,i);
		}
		public List<Assign_scContext> assign_sc() {
			return getRuleContexts(Assign_scContext.class);
		}
		public Assign_scContext assign_sc(int i) {
			return getRuleContext(Assign_scContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEWLINE) | (1L << AS_STRING) | (1L << AS_NUMBER) | (1L << AS_VOID) | (1L << AS_BOOLEAN) | (1L << INCLUDE) | (1L << FUNC) | (1L << ID))) != 0)) {
				{
				setState(159);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(154);
					newline();
					}
					break;
				case AS_STRING:
				case AS_NUMBER:
				case AS_VOID:
				case AS_BOOLEAN:
					{
					setState(155);
					def_var();
					}
					break;
				case FUNC:
					{
					setState(156);
					def_func();
					}
					break;
				case INCLUDE:
					{
					setState(157);
					lib();
					}
					break;
				case ID:
					{
					setState(158);
					assign_sc();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_valContext extends ParserRuleContext {
		public Return_kwContext return_kw() {
			return getRuleContext(Return_kwContext.class,0);
		}
		public Semi_colonContext semi_colon() {
			return getRuleContext(Semi_colonContext.class,0);
		}
		public Expr_contentContext expr_content() {
			return getRuleContext(Expr_contentContext.class,0);
		}
		public Logic_exprContext logic_expr() {
			return getRuleContext(Logic_exprContext.class,0);
		}
		public Op_parContext op_par() {
			return getRuleContext(Op_parContext.class,0);
		}
		public Cl_parContext cl_par() {
			return getRuleContext(Cl_parContext.class,0);
		}
		public Return_valContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).enterReturn_val(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).exitReturn_val(this);
		}
	}

	public final Return_valContext return_val() throws RecognitionException {
		Return_valContext _localctx = new Return_valContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_return_val);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			return_kw();
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(165);
				op_par();
				}
				break;
			}
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(168);
				expr_content(0);
				}
				break;
			case 2:
				{
				setState(169);
				logic_expr();
				}
				break;
			}
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CP) {
				{
				setState(172);
				cl_par();
				}
			}

			setState(175);
			semi_colon();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_opContext extends ParserRuleContext {
		public While_kwContext while_kw() {
			return getRuleContext(While_kwContext.class,0);
		}
		public Op_parContext op_par() {
			return getRuleContext(Op_parContext.class,0);
		}
		public Logic_exprContext logic_expr() {
			return getRuleContext(Logic_exprContext.class,0);
		}
		public Cl_parContext cl_par() {
			return getRuleContext(Cl_parContext.class,0);
		}
		public Block_startContext block_start() {
			return getRuleContext(Block_startContext.class,0);
		}
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public List<Expr_totalContext> expr_total() {
			return getRuleContexts(Expr_totalContext.class);
		}
		public Expr_totalContext expr_total(int i) {
			return getRuleContext(Expr_totalContext.class,i);
		}
		public List<Def_varContext> def_var() {
			return getRuleContexts(Def_varContext.class);
		}
		public Def_varContext def_var(int i) {
			return getRuleContext(Def_varContext.class,i);
		}
		public List<Assign_scContext> assign_sc() {
			return getRuleContexts(Assign_scContext.class);
		}
		public Assign_scContext assign_sc(int i) {
			return getRuleContext(Assign_scContext.class,i);
		}
		public List<Basic_funcContext> basic_func() {
			return getRuleContexts(Basic_funcContext.class);
		}
		public Basic_funcContext basic_func(int i) {
			return getRuleContext(Basic_funcContext.class,i);
		}
		public Block_endContext block_end() {
			return getRuleContext(Block_endContext.class,0);
		}
		public While_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).enterWhile_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).exitWhile_op(this);
		}
	}

	public final While_opContext while_op() throws RecognitionException {
		While_opContext _localctx = new While_opContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_while_op);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			while_kw();
			setState(178);
			op_par();
			setState(179);
			logic_expr();
			setState(180);
			cl_par();
			setState(231);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				{
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(181);
					newline();
					}
					}
					setState(186);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(190);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(187);
					expr_total();
					}
					break;
				case 2:
					{
					setState(188);
					def_var();
					}
					break;
				case 3:
					{
					setState(189);
					assign_sc();
					}
					break;
				}
				setState(195);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(192);
						newline();
						}
						} 
					}
					setState(197);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				}
				break;
			case 2:
				{
				setState(205);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(201);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(198);
						newline();
						}
						}
						setState(203);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(204);
					block_start();
					}
					break;
				}
				setState(210);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(207);
						newline();
						}
						} 
					}
					setState(212);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				setState(219);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(217);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
						case 1:
							{
							setState(213);
							expr_total();
							}
							break;
						case 2:
							{
							setState(214);
							def_var();
							}
							break;
						case 3:
							{
							setState(215);
							assign_sc();
							}
							break;
						case 4:
							{
							setState(216);
							basic_func();
							}
							break;
						}
						} 
					}
					setState(221);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(229);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(225);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(222);
						newline();
						}
						}
						setState(227);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(228);
					block_end();
					}
					break;
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_opContext extends ParserRuleContext {
		public If_kwContext if_kw() {
			return getRuleContext(If_kwContext.class,0);
		}
		public Op_parContext op_par() {
			return getRuleContext(Op_parContext.class,0);
		}
		public Cl_parContext cl_par() {
			return getRuleContext(Cl_parContext.class,0);
		}
		public Then_kwContext then_kw() {
			return getRuleContext(Then_kwContext.class,0);
		}
		public Logic_exprContext logic_expr() {
			return getRuleContext(Logic_exprContext.class,0);
		}
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public If_endContext if_end() {
			return getRuleContext(If_endContext.class,0);
		}
		public Else_opContext else_op() {
			return getRuleContext(Else_opContext.class,0);
		}
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public List<Expr_totalContext> expr_total() {
			return getRuleContexts(Expr_totalContext.class);
		}
		public Expr_totalContext expr_total(int i) {
			return getRuleContext(Expr_totalContext.class,i);
		}
		public List<Def_varContext> def_var() {
			return getRuleContexts(Def_varContext.class);
		}
		public Def_varContext def_var(int i) {
			return getRuleContext(Def_varContext.class,i);
		}
		public List<Assign_scContext> assign_sc() {
			return getRuleContexts(Assign_scContext.class);
		}
		public Assign_scContext assign_sc(int i) {
			return getRuleContext(Assign_scContext.class,i);
		}
		public List<Basic_funcContext> basic_func() {
			return getRuleContexts(Basic_funcContext.class);
		}
		public Basic_funcContext basic_func(int i) {
			return getRuleContext(Basic_funcContext.class,i);
		}
		public If_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).enterIf_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).exitIf_op(this);
		}
	}

	public final If_opContext if_op() throws RecognitionException {
		If_opContext _localctx = new If_opContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_if_op);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(233);
			if_kw();
			setState(234);
			op_par();
			setState(237);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(235);
				logic_expr();
				}
				break;
			case 2:
				{
				setState(236);
				func_call();
				}
				break;
			}
			setState(239);
			cl_par();
			setState(240);
			then_kw();
			setState(244);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(241);
					newline();
					}
					} 
				}
				setState(246);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			setState(253);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP) | (1L << NOT) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << BOOLEAN) | (1L << AS_STRING) | (1L << AS_NUMBER) | (1L << AS_VOID) | (1L << AS_BOOLEAN) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << FOR) | (1L << ID))) != 0)) {
				{
				setState(251);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
				case 1:
					{
					setState(247);
					expr_total();
					}
					break;
				case 2:
					{
					setState(248);
					def_var();
					}
					break;
				case 3:
					{
					setState(249);
					assign_sc();
					}
					break;
				case 4:
					{
					setState(250);
					basic_func();
					}
					break;
				}
				}
				setState(255);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(259);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(256);
				newline();
				}
				}
				setState(261);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(264);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case END_IF:
				{
				setState(262);
				if_end();
				}
				break;
			case ELSE:
				{
				setState(263);
				else_op();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_opContext extends ParserRuleContext {
		public Else_kwContext else_kw() {
			return getRuleContext(Else_kwContext.class,0);
		}
		public If_endContext if_end() {
			return getRuleContext(If_endContext.class,0);
		}
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public List<Expr_totalContext> expr_total() {
			return getRuleContexts(Expr_totalContext.class);
		}
		public Expr_totalContext expr_total(int i) {
			return getRuleContext(Expr_totalContext.class,i);
		}
		public List<Def_varContext> def_var() {
			return getRuleContexts(Def_varContext.class);
		}
		public Def_varContext def_var(int i) {
			return getRuleContext(Def_varContext.class,i);
		}
		public List<Assign_scContext> assign_sc() {
			return getRuleContexts(Assign_scContext.class);
		}
		public Assign_scContext assign_sc(int i) {
			return getRuleContext(Assign_scContext.class,i);
		}
		public List<Basic_funcContext> basic_func() {
			return getRuleContexts(Basic_funcContext.class);
		}
		public Basic_funcContext basic_func(int i) {
			return getRuleContext(Basic_funcContext.class,i);
		}
		public Else_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).enterElse_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PECL3ParserListener ) ((PECL3ParserListener)listener).exitElse_op(this);
		}
	}

	public final Else_opContext else_op() throws RecognitionException {
		Else_opContext _localctx = new Else_opContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_else_op);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(266);
			else_kw();
			setState(270);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(267);
					newline();
					}
					} 
				}
				setState(272);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			}
			setState(279);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP) | (1L << NOT) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << BOOLEAN) | (1L << AS_STRING) | (1L << AS_NUMBER) | (1L << AS_VOID) | (1L << AS_BOOLEAN) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << FOR) | (1L << ID))) != 0)) {
				{
				setState(277);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
				case 1:
					{
					setState(273);
					expr_total();
					}
					break;
				case 2:
					{
					setState(274);
					def_var();
					}
					break;
				case 3:
					{
					setState(275);
					assign_sc();
					}
					break;
				case 4:
					{
					setState(276);
					basic_func();
					}
					break;
				}
				}
				setState(281);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(285);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(282);
				newline();
				}
				}
				setState(287);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(288);
			if_end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_opContext extends ParserRuleContext {
		public Do_endContext do_end() {
			return getRuleContext(Do_endContext.class,0);
		}
		public For_kwContext for_kw() {
			return getRuleContext(For_kwContext.class,0);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public From_kwContext from_kw() {
			return getRuleContext(From_kwContext.class,0);
		}
		public To_kwContext to_kw() {
			return getRuleContext(To_kwContext.class,0);
		}
		public Do_startContext do_start() {
			return getRuleContext(Do_startContext.class,0);
		}
		public List<Expr_totalContext> expr_total() {
			return getRuleContexts(Expr_totalContext.class);
		}
		public Expr_totalContext expr_total(int i) {
